ERROR.txt
gcc -Wall -std=c99 -pedantic -g -lm -c str.c
gcc -Wall -std=c99 -pedantic -g -lm -c instlist.c
gcc -Wall -std=c99 -pedantic -g -lm -c stable.c
gcc -Wall -std=c99 -pedantic -g -lm -c interpret.c
gcc -Wall -std=c99 -pedantic -g -lm -c errors.c
gcc -Wall -std=c99 -pedantic -g -lm -c ial.c
gcc -Wall -std=c99 -pedantic -g -lm -c parser.c
parser.c: In function 'comp_expr':
parser.c:555:40: warning: passing argument 3 of 'SReduction_expr' from incompatible pointer type
    chba = (SReduction_expr(&St, i + 1, prom->LInstr));
                                        ^
parser.c:243:5: note: expected 'struct tGTableItem * (*)[20]' but argument is of type 'struct TinstList *'
 int SReduction_expr(Tstack* St, int i, globalTS *global_table, string *id) {
     ^
parser.c:555:12: error: too few arguments to function 'SReduction_expr'
    chba = (SReduction_expr(&St, i + 1, prom->LInstr));
            ^
parser.c:243:5: note: declared here
 int SReduction_expr(Tstack* St, int i, globalTS *global_table, string *id) {
     ^
parser.c:565:4: warning: implicit declaration of function 'Tpush' [-Wimplicit-function-declaration]
    chba = Tpush(&St);
    ^
